Fix viewport meta tag and update iframe source
Corrected the viewport meta tag and updated iframe source.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initail-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_top">
+    <style>
+      iframe {
+        border: none;
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
-    <iframe style="position:absolute" src="https://script.google.com/macros/s/AKfycbzTRGHqL1LXkh0tkaHmw0at9GnP_W6V6kcLMSbVfgwvBwvq249oJSbvEIDQZe7hujUH/exec"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbw2epYvkZVaXYy0xpK884Jm4S6aJo3A3wKduEvLolJTp7Mci5pnhhMy12cO82bhOGdbLw/exec"></iframe>
   </body>
 </html>
